argo/apps/kavita/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavita
  namespace: media
  annotations:
    argocd.argoproj.io/tracking-id: kavita:apps/Deployment:media/kavita
  labels:
    app.kubernetes.io/name: kavita
    app.kubernetes.io/instance: kavita
    app.kubernetes.io/part-of: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kavita
      app.kubernetes.io/instance: kavita
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kavita
        app.kubernetes.io/instance: kavita
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: kavita
          image: jvmilazz0/kavita:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /kavita/config
            - name: books
              mountPath: /books
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: kavita-config
        - name: books
          persistentVolumeClaim:
            claimName: nfs-pvc-books
