argo/apps/kavita/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita
  namespace: media
  annotations:
    argocd.argoproj.io/tracking-id: kavita:/Service:media/kavita
    homepage/name: "Kavita"
    homepage/namespace: "media"
    homepage/url: "http://10.0.0.29"
    homepage/icon: "book"
    homepage/group: "Media"
    homepage/statusStyle: "dot"
    metallb.io/ip-allocated-from-pool: default-address-pool
  labels:
    app.kubernetes.io/name: kavita
    app.kubernetes.io/instance: kavita
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.29
  selector:
    app.kubernetes.io/name: kavita
    app.kubernetes.io/instance: kavita
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
